sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	for (i<-getNombreValeurs-2 to 0 by -1) {
		for (j<-0 to i) {		
			if (plusPetit((j+1),j)) {
			var swap = false
			echange(j,j+1)
			swap = true;
			}
			if (!swap) {
				return;
			}
			
		}
	}
}
